kubernetes/apps/matrix/synapse/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /.well-known/matrix/client
spec:
  hostnames:
    - "matrix.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: "^/_matrix/client/.*/(?:login|logout|refresh).*"
      backendRefs:
        - name: mas
          namespace: matrix
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix
      backendRefs:
        - name: synapse-matrix-synapse
          namespace: matrix
          port: 8008
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: synapse-wellknown-lighttpd
          namespace: matrix
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /_synapse
      backendRefs:
        - name: synapse-matrix-synapse
          namespace: matrix
          port: 8008
