kubernetes/apps/matrix/synapse/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-mas
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.${SECRET_DOMAIN}`) && PathRegexp(`^/_matrix/client/(.*)/(login|logout|refresh)`)
      kind: Rule
      priority: 100
      services:
        - name: mas
          port: 8080
      middlewares:
          - name: traefik-middleware-chain-no-auth
            namespace: networking
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
